# p4-spectec

./: Makefile  README.md  dockerfile  p4c.dockerfile  p4spectec.dockerfile  p4spectec_p4c.dockerfile
coverage/: p4c-neg.coverage
excludes/exclude-target-specific/: annotation.exclude  bmv2-write-on-struct.exclude  selector-match.exclude
ignores/: function.ignore
p4spec/lib/: dune
p4spec/lib/domain/: lib.ml
p4spec/lib/el/: ast.ml  dune  free.ml  print.ml
p4spec/lib/elaborate/: antiunify.ml  ctx.ml  elab.ml  equiv.ml  fresh.ml  sub.ml
p4spec/lib/elaborate/dataflow/: dctx.ml  partialbind.ml
p4spec/lib/frontend/: lexer.mll  parser.mly
p4spec/lib/il/: ast.ml  dune  free.ml  print.ml  print_debug.ml
p4spec/lib/interface/: context.ml  dune  extract.ml  flatten.ml  lexer.mll  parse.ml  parser.mly  unparse.ml  value.ml  wrap.ml
p4spec/lib/interp-il/: dune  interp.ml  typing.ml
p4spec/lib/interp-sl/: ctx.ml  dune  interp.ml  typing.ml  typing_concrete.ml
p4spec/lib/interp-sl/builtin/: maps.ml
p4spec/lib/parsing/: extract.ml  lexer.mll  parser.mly
p4spec/lib/runtime-dynamic-il/: rel.ml
p4spec/lib/runtime-dynamic-sl/: rel.ml
p4spec/lib/runtime-static/: dune  rel.ml  var.ml
p4spec/lib/runtime-testgen/cov/: multiple.ml  single.ml
p4spec/lib/runtime-testgen/dep/: graph.ml
p4spec/lib/sl/: ast.ml  dune  eq.ml  print.ml
p4spec/lib/structure/: antiunify.ml  instrument.ml  optimize.ml  renamer.ml  struct.ml
p4spec/lib/structure/ol/: ast.ml  eq.ml  print.ml
p4spec/lib/testgen/: config.ml  derive.ml  dune  gen.ml  mutate.ml
p4spec/lib/util/: bigint_json.ml  dune  error.ml  source.ml
p4spec/lib/xl/: atom.ml  dune  mixop.ml  num.ml
p4spec/test/: dune  elab.expected  parser_neg_p4c.expected  parser_pos_p4c.expected  run_il_neg_p4c.expected  run_il_pos_p4c.expected  run_sl_neg_p4c.expected  run_sl_pos_p4c.expected  struct.expected  test.ml
scripts/: cleanup.py  coverage-p4c-noignore.sh  coverage-p4c.sh  fuzz.py  reduce.py
spec/: 1a-syntax-el.watsup  1b-syntax-el-aux.watsup  2a-runtime-domain.watsup  2b2-runtime-value.watsup  2c1-runtime-type.watsup  2c2-runtime-type-aux.watsup  2c3-runtime-type-subst.watsup  2c4-runtime-type-util.watsup  2c5-runtime-type-alpha.watsup  2c6-runtime-type-wellformed.watsup  2d1-runtime-numerics.watsup  2d2-runtime-builtins.watsup  2e-runtime-env.watsup  2f-runtime-ctk.watsup  2g-runtime-flow.watsup  3a-syntax-il.watsup  3b-syntax-il-aux.watsup  4a1-typing-context.watsup  4b-typing-relation.watsup  4c-typing-static-eval.watsup  4d2-typing-subtyping.watsup  4e-typing-expr.watsup  4f-typing-stmt.watsup  4g-typing-decl.watsup  4h-typing-call.watsup
spec-concrete/: 0-aux.watsup  1-syntax.watsup  2.0-domain.watsup  2.1.1-value.watsup  2.1.2-value-aux.watsup  2.2.1-type.watsup  2.2.2-type-aux.watsup  2.2.3-type-subst.watsup  2.2.4-type-util.watsup  2.2.5-type-alpha.watsup  2.3-compile-time-known.watsup  3-numerics.watsup  4-ir-syntax.watsup  5.01-env.watsup  5.02-context.watsup  5.02.1-context.watsup  5.02.2-table-context.watsup  5.03-wellformed.watsup  5.04-typing-relation.watsup  5.05.1-typing-type.watsup  5.05.2-subtype.watsup  5.06.1-expression-static-eval.watsup  5.06.2-typing-expression.watsup  5.07.1-typing-type-argument.watsup  5.07.2-typing-argument.watsup  5.08-typing-lvalue.watsup  5.09-typing-parameter.watsup  5.10-typing-statement.watsup  5.11-typing-declaration.watsup  5.12-typing-extern-method.watsup  5.13.1-typing-parser-statement.watsup  5.13.2-typing-parser-state.watsup  5.13.3-typing-parser-declaration.watsup  5.14.1-typing-control-table.watsup  5.14.2-typing-control-declaration.watsup  5.15.1-typing-call-convention.watsup  5.15.2-typing-call-inference.watsup  5.15.3-typing-constructor-call.watsup  5.15.4-typing-routine-call.watsup  6.07-instantiation-statement.watsup  (+3 more)
