(test
 (name test)
 (preprocess
  (pps ppx_let))
 (modules test)
 (libraries p4spec core core_kernel core_unix core_unix.command_unix)
 (action
  (progn
   (ignore-outputs
    (diff elab.expected elab.actual))
   (ignore-outputs
    (diff struct.expected struct.actual))
   (ignore-outputs
    (diff run_il_pos_p4c.expected run_il_pos_p4c.actual))
   (ignore-outputs
    (diff run_il_neg_p4c.expected run_il_neg_p4c.actual))
   (ignore-outputs
    (diff run_sl_pos_p4c.expected run_sl_pos_p4c.actual))
   (ignore-outputs
    (diff run_sl_neg_p4c.expected run_sl_neg_p4c.actual))
   (ignore-outputs
    (diff cov_dangling_p4c.expected cov_dangling_p4c.actual))
   (ignore-outputs
    (diff parser_pos_p4c.expected parser_pos_p4c.actual))
   (ignore-outputs
    (diff parser_neg_p4c.expected parser_neg_p4c.actual)))))

(rule
 (target elab.actual)
 (action
  (with-stdout-to
   elab.actual
   (with-stderr-to
    elab.err
    (run ./test.exe elab -s ../../../../spec-concrete)))))

(rule
 (target struct.actual)
 (action
  (with-stdout-to
   struct.actual
   (with-stderr-to
    struct.err
    (run ./test.exe struct -s ../../../../spec-concrete)))))

(rule
 (target run_il_pos_p4c.actual)
 (action
  (with-stdout-to
   run_il_pos_p4c.actual
   (with-stderr-to
    run_il_pos_p4c.err
    (run
     ./test.exe
     run-il
     -s
     ../../../../spec-concrete
     -i
     ../../../../p4c/p4include
     -e
     ../../../../excludes
     -d
     ../../../../p4c/testdata/p4_16_samples)))))

(rule
 (target run_il_neg_p4c.actual)
 (action
  (with-stdout-to
   run_il_neg_p4c.actual
   (with-stderr-to
    run_il_neg_p4c.err
    (run
     ./test.exe
     run-il
     -s
     ../../../../spec-concrete
     -i
     ../../../../p4c/p4include
     -e
     ../../../../excludes
     -d
     ../../../../p4c/testdata/p4_16_errors
     -neg)))))

(rule
 (target run_sl_pos_p4c.actual)
 (action
  (with-stdout-to
   run_sl_pos_p4c.actual
   (with-stderr-to
    run_sl_pos_p4c.err
    (run
     ./test.exe
     run-sl
     -s
     ../../../../spec-concrete
     -i
     ../../../../p4c/p4include
     -e
     ../../../../excludes
     -d
     ../../../../p4c/testdata/p4_16_samples)))))

(rule
 (target run_sl_neg_p4c.actual)
 (action
  (with-stdout-to
   run_sl_neg_p4c.actual
   (with-stderr-to
    run_sl_neg_p4c.err
    (run
     ./test.exe
     run-sl
     -s
     ../../../../spec-concrete
     -i
     ../../../../p4c/p4include
     -e
     ../../../../excludes
     -d
     ../../../../p4c/testdata/p4_16_errors
     -neg)))))

(rule
 (target cov_dangling_p4c.actual)
 (action
  (with-stdout-to
   cov_dangling_p4c.actual
   (with-stderr-to
    cov_dangling_p4c.err
    (run
     ./test.exe
     cover-dangling
     -s
     ../../../../spec-concrete
     -i
     ../../../../p4c/p4include
     -e
     ../../../../excludes
     -d
     ../../../../p4c/testdata/p4_16_samples
     -d
     ../../../../p4c/testdata/p4_16_errors)))))

(rule
 (target parser_pos_p4c.actual)
 (action
  (with-stdout-to
   parser_pos_p4c.actual
   (with-stderr-to
    parser_pos_p4c.err
    (run
     ./test.exe
     parser
     -i
     ../../../../p4c/p4include
     -d
     ../../../../p4c/testdata/p4_16_samples)))))

(rule
 (target parser_neg_p4c.actual)
 (action
  (with-stdout-to
   parser_neg_p4c.actual
   (with-stderr-to
    parser_neg_p4c.err
    (run
     ./test.exe
     parser
     -i
     ../../../../p4c/p4include
     -d
     ../../../../p4c/testdata/p4_16_errors)))))
