(library
 (name interface)
 (libraries util domain xl il runtime_dynamic core_unix menhirLib)
 (modules
  source
  context
  extract
  wrap
  flatten
  value
  preprocessor
  lexer
  parser
  parse
  unparse))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags --explain --table --inspection))
